--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "bootstrap-icons": "^1.7.0"
   },
   "name": "bootstrap-sass",
   "version": "1.0.0",
